--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
+		<!-- Starter mail for sending mail -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
