--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.datasource.password=134217728
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Email Test
+
+spring.mail.host=smtp.gmail.com
+
+spring.mail.port=587
+spring.mail.username = xyz@gmail.com
+spring.mail.password = xxxx yyyy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
