--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,6 @@ spring.mail.host=smtp.gmail.com
 
 spring.mail.port=587
 spring.mail.username = xyz@gmail.com
-spring.mail.password = xxxx yyyy
+spring.mail.password = pqr xyz abc bcd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
