_Fixed: Leave entity in new Method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,11 @@ spring.mail.username = xyz@gmail.com
 spring.mail.password = pqr xyz abc bcd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Leave Management
+
+leave.policy.cl-annual=7
+leave.policy.sl-annual=7
+leave.policy.el-annual=18
+leave.policy.monthly-paid-cap=2.5
+
